--- a/backend/test.ipynb
+++ b/backend/test.ipynb
@@ -27,18 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4771fc84",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "load_dotenv()\n",
-    "GROQ_API_KEY = os.getenv(\"GROQ_API_KEY\")\n",
-    "model = ChatGroq(\n",
-    "    model=\"llama-3.1-8b-instant\",\n",
-    "    api_key=GROQ_API_KEY\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -79,10 +72,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "#langgraph state\n",
-    "class AgentState(TypedDict):\n",
-    "    human_input: str\n",
-    "    intent: dict\n",
+    "\n",
     "    \n",
     "# Intent Classifier Node\n",
     "def intent_classifier(state: AgentState) -> AgentState:\n",
@@ -253,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "08fde741",
    "metadata": {},
    "outputs": [
@@ -268,57 +258,88 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from pydantic import BaseModel, Field\n",
-    "from typing import Literal\n",
-    "from datetime import datetime\n",
-    "\n",
-    "class IntentSchema(BaseModel):\n",
-    "    \"\"\"Extract intent and entities for the medical booking system.\"\"\"\n",
-    "    intent: Literal[\"book_appointment\", \"check_availability\", \"other\"]\n",
-    "    doctor_name: Optional[str] = Field(None, description=\"Name of the doctor\")\n",
-    "    appointment_date: Optional[str] = Field(None, description=\"Date (YYYY-MM-DD)\")\n",
-    "    \n",
-    "def extraction_node(state: AgentState):\n",
-    "    # This node turns \"Book Dr. Ahuja tomorrow morning\" into structured JSON\n",
-    "    llm = model.with_structured_output(IntentSchema)\n",
-    "    context = f\"Today's date is {get_today_date()}. user input: {state['human_input']}\"\n",
-    "    result = llm.invoke(context)\n",
-    "\n",
-    "    return {\"extracted_data\": result}\n",
-    "\n",
-    "extraction_node(initial_state)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "dcdf23fe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'extracted_data': IntentSchema(intent='check_availability', doctor_name='Dr. Smith', appointment_date=datetime.datetime(2024, 1, 22, 10, 0))}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "initial_state: AgentState = {\n",
     "    \"human_input\": \"I would like to check availablity with Dr. Smith next Monday at 10 AM.\",\n",
     "    \"intent\": {},\n",
     "}\n",
-    "extraction_node(initial_state)"
+    "extracted_data = extraction_node(initial_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b915a2c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracted_data['extracted_data'].intent\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "22e5b7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing the mcp tool with the llm data extraction\n",
+    "from client import book_appointment, check_availability\n",
+    "\n",
+    "async def call_tool_node(state: AgentState):\n",
+    "    # This node calls your @tool with the extracted JSON\n",
+    "    intent = extracted_data[\"extracted_data\"].intent\n",
+    "    print(intent)\n",
+    "    if intent == \"book_appointment\":\n",
+    "        result = await book_appointment.ainvoke({\n",
+    "            \"doctor_name\": extracted_data[\"extracted_data\"].doctor_name,\n",
+    "            \"appointment_date\": extracted_data[\"extracted_data\"].appointment_date,\n",
+    "        })\n",
+    "        return {\"tool_result\": result}\n",
+    "    elif intent == \"check_availability\":\n",
+    "        result = await check_availability.ainvoke({\n",
+    "            \"doctor_name\": extracted_data[\"extracted_data\"].doctor_name,\n",
+    "            \"appointment_date\": extracted_data[\"extracted_data\"].appointment_date,\n",
+    "        })\n",
+    "        return {\"tool_result\": result}\n",
+    "    return {\"tool_result\": \"No valid intent found.\"}\n",
+    "\n",
+    "res = call_tool_node(extracted_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "302b369b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<coroutine object call_tool_node at 0x000001B17E87CD60>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22e5b7f5",
+   "id": "a2adf078",
    "metadata": {},
    "outputs": [],
    "source": []
